# SkiaPainter

./: CMakeLists.txt  README.md  SkiaPainter.cpp  jni.cpp
canvas/: CanvasAdapter.h  ICanvas.h  SkiaCanvas.h
draw/: echarts.js  font.js  path.js  performance.js  rect.js  run.js  translate.js
js_engine/: engine.h
third/skia/include/android/: SkAndroidFrameworkUtils.h  SkAnimatedImage.h
third/skia/include/c/: sk_canvas.h  sk_colorspace.h  sk_data.h  sk_image.h  sk_imageinfo.h  sk_maskfilter.h  sk_matrix.h  sk_paint.h  sk_path.h  sk_picture.h  sk_shader.h  sk_surface.h  sk_types.h
third/skia/include/codec/: SkAndroidCodec.h  SkCodec.h  SkCodecAnimation.h  SkEncodedOrigin.h
third/skia/include/config/: SkUserConfig.h
third/skia/include/core/: SkAnnotation.h  SkBBHFactory.h  SkBitmap.h  SkBlendMode.h  SkBlender.h  SkBlurTypes.h  SkCanvas.h  SkCanvasVirtualEnforcer.h  SkClipOp.h  SkColor.h  SkColorFilter.h  SkColorPriv.h  SkColorSpace.h  SkContourMeasure.h  SkCoverageMode.h  SkCubicMap.h  SkData.h  SkDataTable.h  SkDeferredDisplayList.h  SkDeferredDisplayListRecorder.h  SkDocument.h  SkDrawLooper.h  SkDrawable.h  SkEncodedImageFormat.h  SkExecutor.h  SkFilterQuality.h  SkFlattenable.h  SkFont.h  SkFontArguments.h  SkFontMetrics.h  SkFontMgr.h  SkFontParameters.h  SkFontStyle.h  SkFontTypes.h  SkGraphics.h  SkICC.h  SkImage.h  SkImageEncoder.h  SkImageFilter.h  SkImageGenerator.h  (+52 more)
third/skia/include/docs/: SkPDFDocument.h  SkXPSDocument.h
third/skia/include/effects/: Sk1DPathEffect.h  Sk2DPathEffect.h  SkBlenders.h  SkBlurDrawLooper.h  (+20 more)
win/: framework.h
(+148 files in other folders)
